# rust-training

./: .gitignore  development-environment-setup.md
day-1/01-creating-simple-application/: QUICKSTART.md  README.md
day-1/01-creating-simple-application/bmi_calculator/src/: main.rs-example
day-1/01-creating-simple-application/exercises/: age_calculator.rs  area_calculator.rs  fibonacci.rs  palindrome_checker.rs  unit_converter.rs
day-1/02-coding-with-rust-modules/: QUICKSTART.md  README.md
day-1/02-coding-with-rust-modules/calculator_modules/: Cargo.toml
day-1/02-coding-with-rust-modules/user_management/: Cargo.toml
day-1/03-rust-data-structures/: QUICKSTART.md  README.md
day-1/03-rust-data-structures/student_records/: Cargo.toml
day-1/04-rust-operators/: QUICKSTART.md  README.md
day-1/04-rust-operators/arithmetic_calculator/: Cargo.toml
day-1/04-rust-operators/bitwise_manipulator/: Cargo.toml-sample
day-1/04-rust-operators/comparison_tester/: Cargo.toml
day-1/04-rust-operators/logical_operations/: Cargo.toml
day-2/01-collection-data-structures/: QUICKSTART.md  README.md
day-2/01-collection-data-structures/advanced_collections/: Cargo.toml-sample
day-2/01-collection-data-structures/hashmap_operations-excercise/: Cargo.toml
day-2/01-collection-data-structures/hashset_explorer/: Cargo.toml
day-2/01-collection-data-structures/vector_manager/: Cargo.toml
day-2/02-controlling-the-flow-of-a-program/: QUICKSTART.md  README.md
day-2/02-controlling-the-flow-of-a-program/control_flow_app/: Cargo.toml
day-2/02-controlling-the-flow-of-a-program/if_else_demo/: Cargo.toml
day-2/02-controlling-the-flow-of-a-program/loop_examples-exercise/: Cargo.toml
day-2/02-controlling-the-flow-of-a-program/match_patterns/: Cargo.toml
day-2/03-boolean-logic/: QUICKSTART.md  README.md
day-2/03-boolean-logic/boolean_calculator/: Cargo.toml
day-2/03-boolean-logic/logic_operations-exercise/: Cargo.toml
day-2/03-boolean-logic/truth_tables/: Cargo.toml
day-2/04-loops/: QUICKSTART.md  README.md
day-2/04-loops/basic_loops/: Cargo.toml
day-2/04-loops/iterator_examples/: Cargo.toml
day-2/04-loops/loop_patterns/: Cargo.toml
day-2/05-expanding-the-application/: QUICKSTART.md  README.md
day-2/05-expanding-the-application/config_management/: Cargo.toml
day-2/05-expanding-the-application/full_featured_app/: Cargo.toml
day-2/05-expanding-the-application/library_binary_split/: Cargo.toml
day-2/05-expanding-the-application/modular_app/: Cargo.toml
day-2/06-pattern-matching-in-rust/: QUICKSTART.md  README.md
day-2/06-pattern-matching-in-rust/advanced_patterns/: Cargo.toml
day-2/06-pattern-matching-in-rust/destructuring_demo/: Cargo.toml
day-2/06-pattern-matching-in-rust/enum_patterns/: Cargo.toml
day-3/01-creating-a-rust-library/: QUICKSTART.md  README.md
day-3/01-creating-a-rust-library/config_manager_lib/: Cargo.toml
day-3/01-creating-a-rust-library/data_processor_lib/: Cargo.toml
day-3/01-creating-a-rust-library/simple_math_lib/: Cargo.toml
day-3/01-creating-a-rust-library/string_utils_lib/: Cargo.toml
day-3/02-publishing-rust-repository-crates-io/: QUICKSTART.md  README.md
day-3/02-publishing-rust-repository-crates-io/binary_crate_demo/: Cargo.toml  README.md
day-3/02-publishing-rust-repository-crates-io/binary_crate_demo/src/: main.rs
day-3/02-publishing-rust-repository-crates-io/feature_flags_demo/: Cargo.toml  README.md
day-3/02-publishing-rust-repository-crates-io/feature_flags_demo/src/: lib.rs
day-3/02-publishing-rust-repository-crates-io/first_publish_demo/: Cargo.toml  LICENSE-MIT  README.md
day-3/02-publishing-rust-repository-crates-io/first_publish_demo/src/: lib.rs
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/: Cargo.toml  README.md
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/myapp/: Cargo.toml
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/myapp/src/: lib.rs
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/myapp_core/: Cargo.toml
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/myapp_core/src/: lib.rs
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/myapp_utils/: Cargo.toml
day-3/02-publishing-rust-repository-crates-io/workspace_publish_demo/myapp_utils/src/: lib.rs
day-3/03-integrating-rust-existing-application/: COMPLETION_SUMMARY.md  QUICKSTART.md  README.md
day-3/03-integrating-rust-existing-application/c_ffi_demo/: Cargo.toml  README.md  build_and_test.ps1  build_and_test.sh  cbindgen.toml
day-3/03-integrating-rust-existing-application/nodejs_addon_demo/: Cargo.toml  README.md  index.js  package.json  test.js
day-3/03-integrating-rust-existing-application/python_extension_demo/: Cargo.toml  README.md  pyproject.toml
day-3/03-integrating-rust-existing-application/wasm_demo/: Cargo.toml  HOW_IT_WORKS.md  README.md
(+92 files in other folders)
