[package]
name = "binary_crate_demo"
version = "0.1.0"
edition = "2021"
authors = ["Rust Training <training@example.com>"]
description = "A demonstration CLI tool for learning how to publish binary crates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/binary_crate_demo"
readme = "README.md"
keywords = ["cli", "tool", "demo", "binary"]
categories = ["command-line-utilities"]

# Binary crates should include Cargo.lock
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[[bin]]
name = "demo-tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

