[package]
name = "feature_flags_demo"
version = "0.1.0"
edition = "2021"
authors = ["Rust Training <training@example.com>"]
description = "Demonstration of feature flags and conditional compilation for publishing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/feature_flags_demo"
documentation = "https://docs.rs/feature_flags_demo"
readme = "README.md"
keywords = ["features", "conditional", "demo", "tutorial"]
categories = ["development-tools"]

[features]
default = ["std"]
std = []
serde_support = ["dep:serde", "dep:serde_json"]
async_support = ["dep:tokio"]
crypto = ["dep:sha2", "dep:base64"]
full = ["std", "serde_support", "async_support", "crypto"]

[dependencies]
# Optional dependencies - only included when features are enabled
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["rt", "macros"], optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

# Always included dependencies
thiserror = "1.0"

[dev-dependencies]
# Test dependencies (always available in tests)
tokio-test = "0.4"

